--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "public"]
 	path = public
-	url = https://github.com/LaMelD/lameld.github.io.git
+	url = https://github.com/lameld/lameld.github.io.git
 	branch = master
