--- a/config.toml
+++ b/config.toml
@@ -80,4 +80,4 @@ weight = 7
 
   [params.logo]
       mobile = "/images/logo-mobile.svg"
-      standard  = "/images/logo.svg"
+      standard  = "/images/logo.png"
