--- a/config.toml
+++ b/config.toml
@@ -36,38 +36,52 @@ summaryLength = 30
     weight = 5
 
 [[menu.main]]
-name = "Git&Github"
-url = "/gitstudy/"
-weight = 6
+    name = "Git&Github"
+    url = "/gitstudy/"
+    weight = 6
 
 [[menu.main]]
-name = "Python"
-url = "/python/"
-weight = 7
+    name = "Python"
+    url = "/python/"
+    weight = 7
+
+[[menu.main]]
+    name = "Django boardapp"
+    url = "/django_board/"
+    weight = 8
+
+[[menu.main]]
+    name = "Django todoapp"
+    url = "/django_todo/"
+    weight = 9
 
 [params]
-  google_analytics_id=""
-  homepage_button_link_kakao = '/kakao'
-  homepage_button_text_kakao = 'kakao 문제 풀이'
-  homepage_button_link_swea = '/swea'
-  homepage_button_text_swea = 'SWexpertAcademy 문제 풀이'
-  homepage_button_link_gitstudy = '/gitstudy'
-  homepage_button_text_gitstudy = 'Git&Github'
-  homepage_button_link_datastructure = '/datastructure'
-  homepage_button_text_datastructure = '자료구조'
-  homepage_button_link_cloudbasic = '/cloudbasic'
-  homepage_button_text_cloudbasic = '클라우드 기초지식'
-  homepage_button_link_python = '/python'
-  homepage_button_text_python = '점프 투 파이썬'
-  homepage_intro = '이 블로그의 설명을 담겠습니다.'
-  homepage_image = '/images/terminal.gif'
-  # 폴더를 추가하려면 아래에 등록하세요
-  mainSections = ['kakao', 'swea', 'gitstudy', 'datastructure', 'cloudbasic', 'python']
+    google_analytics_id=""
+    homepage_button_link_kakao = '/kakao'
+    homepage_button_text_kakao = 'kakao 문제 풀이'
+    homepage_button_link_swea = '/swea'
+    homepage_button_text_swea = 'SWexpertAcademy 문제 풀이'
+    homepage_button_link_gitstudy = '/gitstudy'
+    homepage_button_text_gitstudy = 'Git&Github'
+    homepage_button_link_datastructure = '/datastructure'
+    homepage_button_text_datastructure = '자료구조'
+    homepage_button_link_cloudbasic = '/cloudbasic'
+    homepage_button_text_cloudbasic = '클라우드 기초지식'
+    homepage_button_link_python = '/python'
+    homepage_button_text_python = '점프 투 파이썬'
+    homepage_button_link_djangoboard = '/django_board'
+    homepage_button_text_djangoboard = '장고 Board'
+    homepage_button_link_djangotodo = '/django_todo'
+    homepage_button_text_djangotodo = '장고 Todo'
+    homepage_intro = '이 블로그의 설명을 담겠습니다.'
+    homepage_image = '/images/terminal.gif'
+    # 폴더를 추가하려면 아래에 등록하세요
+    mainSections = ['kakao', 'swea', 'gitstudy', 'datastructure', 'cloudbasic', 'python', 'django_board', 'django_todo']
 
   ## You can enable to add anchor links to header elements
   # enable_anchor_link = true
 
-  [params.homepage_meta_tags]
+[params.homepage_meta_tags]
     meta_description = "Hugo"
     meta_og_title = "Hugo"
     meta_og_type = "website"
@@ -78,6 +92,6 @@ weight = 7
     meta_twitter_site = "@"
     meta_twitter_creator = "@"
 
-  [params.logo]
-      mobile = "/images/logo.png"
-      standard  = "/images/logo.png"
+[params.logo]
+    mobile = "/images/logo.png"
+    standard  = "/images/logo.png"
